# dmclk

./: CMakeLists.txt  README.md  dmclk.dmr  dmclk_port.dmr  dmclk_test.dmr  manifest.dmm
.github/workflows/: ci.yml  release.yml
configs/: README.md
configs/board/: nucleo-f401re.ini  nucleo-f411re.ini  nucleo-f446re.ini  nucleo-f767zi.ini  stm32f4-discovery.ini  stm32f429i-discovery.ini  stm32f746g-disco.ini  stm32f769i-discovery.ini
configs/mcu/: stm32f401re.ini  stm32f405rg.ini  stm32f407vg.ini  stm32f411re.ini  stm32f429zi.ini  stm32f439zi.ini  stm32f446re.ini  stm32f469ni.ini  stm32f722re.ini  stm32f746zg.ini  stm32f767zi.ini  stm32f769ni.ini
docs/: README.md  api-reference.md  configuration.md  dmclk.md  examples.md  port-implementation.md
examples/: config.ini
include/: dmclk.h  dmclk_port.h  dmclk_port_defs.h
include/port/: stm32_common_regs.h  stm32f7_regs.h
src/: dmclk.c
src/port/: CMakeLists.txt  README.md
src/port/stm32_common/: stm32_common.c  stm32_common.h
src/port/stm32f4/: port.c
src/port/stm32f7/: port.c
test_build/: dmclk_version_requirements.txt
test_build_port/: dmclk_defs.h  dmclk_header.c
test_build_port/dmf/: dmclk_port_version.txt  dmclk_version.txt
test_build_port/src/port/: dmclk_port_defs.h  dmclk_port_header.c
tests/dmclk-test/: CMakeLists.txt  dmclk_test.c
tests/dmod-boot-test/: CMakeLists.txt  README.md  TESTING_SUMMARY.md  test_dmclk.c
